// agent_service.proto

syntax = "proto3";
package autoagent.api;

import "autoagent/api/common.proto";
import "buf/validate/validate.proto";
import "google/protobuf/duration.proto";

// =============================================================================
// Le Service de Session d'Agent (Agent Session Service)
//
// Gère des sessions de travail interactives et état-major pour des agents autonomes.
// Le client (Go/Temporal) agit comme un superviseur, donnant des objectifs
// et recevant des résultats d'étape.
// =============================================================================
service AgentSessionService {
  // Démarre une nouvelle session d'agent, provisionne les ressources (sandbox)
  // et retourne un ID de session unique.
  rpc StartSession(StartSessionRequest) returns (StartSessionResponse);

  // Exécute une "étape" de travail au sein d'une session existante.
  // C'est un RPC avec streaming bi-directionnel pour l'observabilité en temps réel.
  rpc ExecuteStep(stream ExecuteStepRequest) returns (stream ExecuteStepResponse);

  // Termine une session, finalise le travail et libère les ressources.
  rpc StopSession(StopSessionRequest) returns (StopSessionResponse);
}

// --- Messages pour le cycle de vie de la session ---

message StartSessionRequest {
  string request_id = 1 [(buf.validate.field).string.uuid = true];
  AgentProfile agent_profile = 2 [(buf.validate.field).required = true];
  WorkspaceReference initial_workspace = 3 [(buf.validate.field).required = true];
}

message StartSessionResponse {
  string session_id = 1 [(buf.validate.field).string.min_len = 1];
}

message StopSessionRequest {
  string request_id = 1 [(buf.validate.field).string.uuid = true];
  string session_id = 2 [(buf.validate.field).string.min_len = 1];
  FinalStatus final_status = 3 [(buf.validate.field).enum.defined_only = true];
  // La logique applicative doit s'assurer que ce message n'est fourni que si final_status est SUCCESS.
  string commit_message = 4 [(buf.validate.field).string.max_len = 256];
}

message StopSessionResponse {
  WorkspaceReference final_workspace = 1; // Retourné uniquement en cas de succès.
}

enum FinalStatus {
  FINAL_STATUS_UNSPECIFIED = 0;
  FINAL_STATUS_SUCCESS = 1; // La tâche est considérée comme réussie, le travail doit être commité.
  FINAL_STATUS_FAILURE = 2; // La tâche a échoué, le travail doit être archivé mais pas commité.
}

// --- Messages pour l'exécution d'une étape ---

message ExecuteStepRequest {
  string request_id = 1 [(buf.validate.field).string.uuid = true];
  string session_id = 2 [(buf.validate.field).string.min_len = 1];
  // Ce n'est plus une commande shell, mais une directive de haut niveau pour l'agent.
  string directive = 3 [(buf.validate.field).string.min_len = 10];
  // Un timeout doit toujours être spécifié pour éviter les blocages.
  google.protobuf.Duration timeout = 4 [(buf.validate.field).required = true];
}

message ExecuteStepResponse {
  oneof event {
    option (buf.validate.oneof).required = true;
    LogChunk log_chunk = 1;
    StepResult result = 2;
    Error error = 3;
  }
}

// Le résultat complet d'une étape de travail.
message StepResult {
  string summary = 1 [(buf.validate.field).string.min_len = 5];
  ExecutionStatus status = 2 [(buf.validate.field).enum.defined_only = true];
  string last_stdout = 3;
  string last_stderr = 4;
}

// Un chunk de log (stdout ou stderr).
message LogChunk {
  enum Stream {
    STREAM_UNSPECIFIED = 0;
    STREAM_STDOUT = 1;
    STREAM_STDERR = 2;
  }
  Stream stream = 1 [(buf.validate.field).enum.defined_only = true];
  bytes content = 2 [(buf.validate.field).bytes.min_len = 1];
}
